--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <p>Przekierowanie do logowania...</p>
   <script>
     // W razie gdyby meta-refresh nie zadziałał
-    window.location.href = "login.html";
+    window.location.href = "main.html";
   </script>
   <script>
     fetch('/api/antidebug.js')
