--- a/main.html
+++ b/main.html
@@ -1,5 +1,9 @@
 <head>
     <!-- Firebase + app config ładowane modułowo -->
+        <script type="module" src="assets/supabase-config.js"></script>
+
+    <script type="module" src="assets/auth-check.js"></script>
+    
     <!-- Skrypty klasyczne -->
     <script src="assets/test-hwid.js"></script>
     <script src="assets/indexeddb.js"></script>
